<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ToDO verify and apply these naming prefixes convention
        cd      : content description
        btn     : Button text
        tx      : text
        tittle  : title
        hint    : EditText hint

    -->
    <string name="app_name">PicSpy</string>
    <string name="gcm_sender_id">159973896341</string>
    <string name="action_settings">Menu</string>
    <string name="friend_delete_menu">Remove Friend</string>
    <string name="challenge_action_settings">Refresh </string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="tx_login">Log In</string>
    <string name="tx_signup">Sign Up</string>
    <string name="tx_login_title">Resume PicSpy</string>
    <string name="tx_signup_title">Join PicSpy</string>
    <string name="pass_hint1">Password</string>
    <string name="email_hint">name@example.com</string>
    <string name="forgot_password_prompt">Forgot Password?</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">register</string>
    <string name="pass_hint2">Re-type Password</string>
    <string name="hint_username">Username</string>
    <string name="title_activity_post_registration">PostRegistrationActivity</string>
    <string name="login_loading">Logging In…</string>
    <string name="title_activity_splash">Splash_Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">567017063440429</string>

    <string name="error_title_login">"Log In failed"</string>
    <string name="error_title_signup">"Sign Up failed"</string>

    <!--Login / Register error strings-->
    <string name="password_too_short">Passwords must be at least 6 characters.</string>
    <string name="email_invalid">Invalid email address</string>
    <string name="required_field">Required</string>

    <!-- activity_friend_info.xml-->
    <string name="score"> 0 </string>
    <string name="leaderboard_description">Games on Leaderboard</string>
    <string name="total_won_description">Won</string>
    <string name="total_lost_description">Lost</string>
    <string name="stats_title">All Time</string>
    <string name="games_sent_description">Challenges I received</string>
    <string name="games_received_description">Challenges I sent</string>
    <string name="friend_info_no_connection">No connection</string>
    <string name="sent_summary">You won %1$d%% of challenges &lt;u>%2$s&lt;/u> sent</string>
    <string name="received_summary">&lt;u>%1$s&lt;/u> won %2$d%% of challenges you sent</string>
    <string name="total_stats_title">Total games played</string>
    <string name="empty_sent_challenges">No challenges sent to &lt;u>%1$s&lt;/u></string>
    <string name="empty_received_challenges">No challenges received from &lt;u>%1$s&lt;/u></string>
    <string name="no_friend_stats_title">No game stats. You are not friends.</string>
    <string name="info_page_title">Profile</string>
    <string name="dialog_remove_friend_title">Remove Friend</string>
    <string name="dialog_remove_friend_message">Are you sure you want to remove this user?</string>
    <string name="toast_friend_removed">Friend successfully removed</string>

    <!-- list_item_challenge.xmle.xml-->
    <string name="guesses_text">Guess</string>
    <string name="challenge_time_text">Time</string>

    <string name="home_fragment">Home</string>
    <string name="friends_fragment">Friends</string>
    <string name="menu_fragment">Menu</string>
    <string name="top_fragment">Open Challenges</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friend_info">FriendInfoActivity</string>
    <string name="title_activity_challenges">ChallengesActivity</string>

    <!-- friend_fragment> -->
    <string name="search_friend_hint">Search friends </string>
    <string name="find_button_description">Find new friends and see requests</string>
    <string name="title_activity_find_friend">FindFriendActivity</string>
    <string name="friends_fragment_empty_search">No friend with entered username</string>
    <string name="friends_fragment_no_friends">You don\'t have any friends yet</string>
    <string name="find_friend_link">FIND FRIENDS</string>

    <!-- activity_find_friend -->
    <string name="edt_search_hint">Search by Username</string>
    <string name="btn_search">Search</string>
    <string name="tx_empty_list">No new requests!\nSwipe right to search users</string>
    <string name="err_friend_notif">"No connection to server, unable to get friend request"</string>
    <string name="title_list_header">FRIEND REQUESTS</string>
    <string name="message_user_not_found">No user with given username</string>
    <string name="message_cannot_add_self">You cannot add yourself</string>
    <string name="message_request_sent">Friend request sent</string>
    <string name="message_already_friends">You are already friends</string>

    <!-- list_item_friend_request -->
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>

    <!-- item_add_friend -->
    <string name="btn_send_request">Send request</string>

    <!-- activity_challenges -->
    <string name="tx_empty_list_challenges">No new challenges</string>
    <string name="err_challenge_notif">"No connection to server, unable to get challenge"</string>

    <!-- choose_friends_fragment-->
    <string name="no_friends">No friends</string>

    <!-- configure_challenge_fragment -->
    <string name="hint_title">Hint</string>
    <string name="guess_title">Guess</string>
    <string name="time_title">Time</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="hint_input_hint">Max 50 characters</string>
    <string name="title_fragment_configure_challenge">Game options</string>
    <string name="leaderboard_option_description">Feature on leaderboard?</string>
    <string name="time_option_description">3 – 30  Seconds</string>
    <string name="guess_option_description">1 – 5  Guesses</string>
    <string name="menu_item_send">Send</string>
    <string name="menu_item_next">Next</string>
    <string name="character_count_value">%1$d/50</string>

    <!-- multiple -->
    <string name="cd_start_game">Start new game</string>
    <string name="cd_user_icon">User icon</string>
    <string name="title_activity_find_friends">FindFriendsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_send_challenge">SendChallenge</string>
    <string name="search_hint">Search</string>
    <string name="search_title">Search Friends</string>

    <!-- view_network_error_toast network error text-->
    <string name="networkErrorText">No connection to server.</string>

    <!--ViewChallenge-->
    <string name="title_game_hint">HINT</string>
    <string name="swipe_hint">--> Swipe for hint</string>
    <string name="title_challenge_hint">Hope this hint helps:\n</string>
    <string name="download_progress">Fetching image…</string>

    <!--fragment_top-->
    <string name="top_challenge_empty_text">Top challenges will appear here. Swipe down to refresh</string>

    <!--activity_challenges-->
    <string name="challenges_activity_empty_text">No new challenges. Challenges sent to you will appear here</string>

    <string name="error_message_network">Unable to reach network. Check your connection and try again.</string>
    <string name="error_message_invalid_login">Invalid username or password</string>
    <string name="error_title_send_game">Error sending challenge</string>
    <string name="title_fragment_choose_friends">Send to…</string>
    <string name="progress_dialog_message_login">Login in…</string>
    <string name="progress_dialog_message_register">Registering…</string>
    <string name="progress_dialog_message_add_user">Adding user…</string>
    <string name="progress_dialog_message_send_game">Sending challenge…</string>
    <string name="toast_game_sent">Games successfully sent</string>
    <string name="dialog_ok">OK</string>
</resources>
