<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.picspy.views.RegisterActivity">

    <!--TODO add facebook signup here-->
    <TextView
        android:id="@+id/register_title"
        style="@style/login_and_register_titles"
        android:text="@string/tx_signup"/>

    <!--com.facebook.login.widget.LoginButton
        style="@style/login_text_style"
        android:id="@+id/facebook_login_button"
        android:layout_marginTop="20dp"
        android:layout_below="@id/register_title"/-->

    <EditText
        android:id="@+id/edit_display_name"
        style="@style/login_text_style"
        android:layout_below="@id/register_title"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_username"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"/>

    <EditText
        android:id="@+id/edit_email"
        style="@style/login_text_style"
        android:layout_below="@id/edit_display_name"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_password"
        style="@style/login_text_style"
        android:layout_below="@id/edit_email"
        android:hint="@string/pass_hint1"
        android:imeOptions="actionDone"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_signup"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:background="@color/primary"
        android:onClick="signUp"
        android:text="@string/tx_signup"
        android:textColor="@color/primary_text_default_material_dark"
        android:textStyle="bold"
        android:visibility="gone"/>
</RelativeLayout>