<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:actionBarNavMode="standard"
              tools:context="com.picspy.views.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="3"
                android:gravity="center">

                <TextView
                    android:id="@+id/login_title"
                    style="@style/login_and_register_titles"
                    android:text="@string/tx_login_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="3"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_email"
                    style="@style/login_text_style"
                    android:layout_gravity="center"
                    android:hint="@string/email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/user_password"
                    style="@style/login_text_style"
                    android:hint="@string/pass_hint1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/selector_login_btn"
                    android:enabled="false"
                    android:onClick="login"
                    android:text="@string/tx_login"
                    android:textColor="@color/color_list_login_btn"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>