<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.picspy.views.FindFriendsActivity">

    <include
        android:id="@+id/find_friend_toolbar"
        layout="@layout/custom_tool_bar"/>

    <TextView
        android:id="@+id/requests_header"
        android:layout_below="@+id/find_friend_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_list_header"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:textColor="@color/secondary_text"
        android:singleLine="true"
        android:textStyle="bold"
        android:background="@drawable/horizontal_divider"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/requests_header"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_add_friend"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@id/bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/btn_search"
        android:background="@drawable/selector_friend_add_btn"
        android:onClick="findUser"/>

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:layout_toLeftOf="@id/btn_add_friend"
        android:layout_toStartOf="@id/btn_add_friend"
        android:layout_margin="4dp"
        android:inputType="text"
        android:singleLine="true"
        android:layout_gravity="start|center_vertical"
        android:textColor="@color/primary_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/edt_search_hint"
        android:background="@drawable/search_field_style"/>

    <ListView
        android:id="@+id/request_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/requests_header"
        android:layout_above="@id/username_field"/>

    <View
        android:id="@+id/bar"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/primary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </View>

    <ImageButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_open_camera"
        android:background="@color/primary"
        android:onClick="launchCamera"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/bar"
        android:layout_alignBottom="@+id/bar"
        android:layout_centerHorizontal="true"
        android:id="@+id/cameraButton"
        android:contentDescription="@string/cd_start_game" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_below="@+id/requests_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primary_text"
        android:text="@string/tx_empty_list"
        android:gravity="center"
        android:visibility="gone"/>
</RelativeLayout>
