<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/request_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="4dp"
        android:src="@drawable/ic_friend"
        android:background="@drawable/bg_friend_icon_circle"
        android:contentDescription="@string/cd_user_icon" />

    <Button
        android:id="@+id/decline_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/request_icon"
        android:layout_alignBottom="@+id/request_icon"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/btn_decline"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/selector_friend_decline_btn" />

    <Button
        android:id="@+id/accept_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/decline_friend"
        android:layout_toStartOf="@id/decline_friend"
        android:layout_alignTop="@+id/request_icon"
        android:layout_alignBottom="@+id/request_icon"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        android:text="@string/btn_accept"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/selector_friend_accept_btn"/>

    <TextView
        android:id="@+id/request_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_toRightOf="@id/request_icon"
        android:layout_toEndOf="@+id/request_icon"
        android:layout_toLeftOf="@id/accept_friend"
        android:layout_toStartOf="@id/accept_friend"
        android:layout_alignTop="@+id/request_icon"
        android:layout_alignBottom="@+id/request_icon"
        android:gravity="center_vertical"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
</RelativeLayout>